Adds unit class.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <title>Rise of Kings</title>
     <script type="text/javascript" src="zogl/js/zogl.min.js"></script>
+
+    <script type="text/javascript" src="game/unit.js"></script>
     <script type="text/javascript" src="game/game.js"></script>
 
     <style type="text/css">
