--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src="zogl/js/zogl.min.js"></script>
 
     <script type="text/javascript" src="game/unit.js"></script>
+    <script type="text/javascript" src="game/unitmanager.js"></script>
+    <script type="text/javascript" src="game/astar.js"></script>
     <script type="text/javascript" src="game/game.js"></script>
 
     <style type="text/css">
