--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <body>
     <p></p>
     <img src="tank.png"></img>
+    <img src="grass.png"></img>
     <canvas id="webgl-canvas"></canvas>
 </body>
 </html>
