--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Rise of Kings</title>
     <script type="text/javascript" src="zogl/js/zogl.min.js"></script>
 
+    <script type="text/javascript" src="game/utilities.js"></script>
     <script type="text/javascript" src="game/unit.js"></script>
     <script type="text/javascript" src="game/unitmanager.js"></script>
     <script type="text/javascript" src="game/astar.js"></script>
