Adds archer sprite.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <script type="text/javascript" src="zogl/js/zogl.min.js"></script>
 
     <script type="text/javascript" src="game/utilities.js"></script>
+    <script type="text/javascript" src="game/map.js"></script>
     <script type="text/javascript" src="game/unit.js"></script>
     <script type="text/javascript" src="game/unitmanager.js"></script>
     <script type="text/javascript" src="game/astar.js"></script>
+    <script type="text/javascript" src="game/player.js"></script>
     <script type="text/javascript" src="game/game.js"></script>
 
     <style type="text/css">
@@ -33,6 +35,7 @@
     <p></p>
     <img src="tank.png"></img>
     <img src="grass.png"></img>
+    <img src="archer.png"></img>
     <canvas id="webgl-canvas"></canvas>
 </body>
 </html>
