--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <script type="text/javascript" src="game/utilities.js"></script>
     <script type="text/javascript" src="game/map.js"></script>
+    <script type="text/javascript" src="game/projectile.js"></script>
     <script type="text/javascript" src="game/unit.js"></script>
     <script type="text/javascript" src="game/unitmanager.js"></script>
     <script type="text/javascript" src="game/astar.js"></script>
