Refreshable peer list integrated.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script type="text/javascript" src="game/player.js"></script>
     <script type="text/javascript" src="game/game.js"></script>
 
+    <script src="http://cdn.peerjs.com/0.3/peer.min.js"></script>
+
     <style type="text/css">
         html {
             -ms-touch-action: none;
@@ -38,5 +40,7 @@
     <img src="grass.png"></img>
     <img src="archer.png"></img>
     <canvas id="webgl-canvas"></canvas>
+    <a onclick="refreshLobby();" href='#'>Refresh</a>
+    <div id="hosts"></div>
 </body>
 </html>
