--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Rise of Kings</title>
     <script type="text/javascript" src="zogl/js/zogl.min.js"></script>
 
-    <script type="text/javascript" src="game/network.js"></script>
     <script type="text/javascript" src="game/utilities.js"></script>
+    <script type="text/javascript" src="game/queue.js"></script>
+    <script type="text/javascript" src="game/network.js"></script>    
     <script type="text/javascript" src="game/map.js"></script>
     <script type="text/javascript" src="game/projectile.js"></script>
     <script type="text/javascript" src="game/unit.js"></script>
