--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
     <script type="text/javascript" src="game/utilities.js"></script>
     <script type="text/javascript" src="game/queue.js"></script>
-    <script type="text/javascript" src="game/network.js"></script>    
+    <script type="text/javascript" src="game/network.js"></script>
     <script type="text/javascript" src="game/map.js"></script>
     <script type="text/javascript" src="game/projectile.js"></script>
     <script type="text/javascript" src="game/unit.js"></script>
     <script type="text/javascript" src="game/unitmanager.js"></script>
     <script type="text/javascript" src="game/astar.js"></script>
+    <script type="text/javascript" src="game/squad.js"></script>
     <script type="text/javascript" src="game/player.js"></script>
     <script type="text/javascript" src="game/game.js"></script>
 
