--- a/index.html
+++ b/index.html
@@ -6,17 +6,6 @@
     <meta name="user-scalable" content="no">
 
     <title>Rise of Kings</title>
-    <script type="text/javascript" src="zogl/js/zogl.min.js"></script>
-
-    <script type="text/javascript" src="game/utilities.js"></script>
-    <script type="text/javascript" src="game/map.js"></script>
-    <script type="text/javascript" src="game/projectile.js"></script>
-    <script type="text/javascript" src="game/unit.js"></script>
-    <script type="text/javascript" src="game/unitmanager.js"></script>
-    <script type="text/javascript" src="game/astar.js"></script>
-    <script type="text/javascript" src="game/player.js"></script>
-    <script type="text/javascript" src="game/game.js"></script>
-
     <style type="text/css">
         html {
             -ms-touch-action: none;
@@ -38,5 +27,25 @@
     <img src="grass.png"></img>
     <img src="archer.png"></img>
     <canvas id="webgl-canvas"></canvas>
+    <p>
+        <a onclick="refreshLobby();" href='#'>Refresh</a>
+    </p>
+    <div id="hosts"></div>
+
+    <script type="text/javascript" src="zogl/js/zogl.min.js"></script>
+
+    <script type="text/javascript" src="game/utilities.js"></script>
+    <script type="text/javascript" src="game/queue.js"></script>
+    <script type="text/javascript" src="game/network.js"></script>
+    <script type="text/javascript" src="game/map.js"></script>
+    <script type="text/javascript" src="game/projectile.js"></script>
+    <script type="text/javascript" src="game/unit.js"></script>
+    <script type="text/javascript" src="game/unitmanager.js"></script>
+    <script type="text/javascript" src="game/astar.js"></script>
+    <script type="text/javascript" src="game/squad.js"></script>
+    <script type="text/javascript" src="game/player.js"></script>
+    <script type="text/javascript" src="game/game.js"></script>
+
+    <script src="http://cdn.peerjs.com/0.3/peer.min.js"></script>
 </body>
 </html>
