Adds separate file for message info.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="zogl/js/zogl.min.js"></script>
 
     <script type="text/javascript" src="game/utilities.js"></script>
+    <script type="text/javascript" src="game/message.js"></script>
     <script type="text/javascript" src="game/queue.js"></script>
     <script type="text/javascript" src="game/network.js"></script>
     <script type="text/javascript" src="game/map.js"></script>
