--- a/index.html
+++ b/index.html
@@ -6,72 +6,9 @@
     <meta name="user-scalable" content="no">
 
     <title>Rise of Kings</title>
-    <style type="text/css">
-        html {
-            -ms-touch-action: none;
-        }
-
-        canvas {
-            border: 1px solid black;
-        }
-
-        img {
-            display: none;
-        }
-
-        .button {
-            -moz-box-shadow: 0px 1px 0px 0px #bee2f9;
-            -webkit-box-shadow: 0px 1px 0px 0px #bee2f9;
-            box-shadow: 0px 1px 0px 0px #bee2f9;
-            background-color:#63b8ee;
-            -webkit-border-top-left-radius:0px;
-            -moz-border-radius-topleft:0px;
-            border-top-left-radius:0px;
-            -webkit-border-top-right-radius:0px;
-            -moz-border-radius-topright:0px;
-            border-top-right-radius:0px;
-            -webkit-border-bottom-right-radius:0px;
-            -moz-border-radius-bottomright:0px;
-            border-bottom-right-radius:0px;
-            -webkit-border-bottom-left-radius:0px;
-            -moz-border-radius-bottomleft:0px;
-            border-bottom-left-radius:0px;
-            text-indent:0px;
-            border:1px solid #3866a3;
-            display:inline-block;
-            color:#14396a;
-            font-family:Verdana;
-            font-size:15px;
-            font-weight:normal;
-            font-style:normal;
-            height:57px;
-            line-height:57px;
-            width:128px;
-            text-decoration:none;
-            text-align:center;
-        }.button:hover {
-            background-color:#438ccc;
-        }.button:active {
-            position:relative;
-            top:1px;
-        }
-
-        #lobby {
-            width: 100%;
-        }
-
-        #lobby tr, #lobby td {
-            border: 1px solid black;
-        }
-
-        #lobby tr:nth-child(:odd) {
-            background: gray;
-        }
-
-        #lobby tr:nth-child(:even) {
-            background: black;
-        }
-    </style>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/style.css" type="text/css">
 
 </head>
 <body>
@@ -88,6 +25,7 @@
     <a class="button" id="join-btn" href="javascript:;">Join Game</a>
     <a class="button" id="join-btn" href="javascript:refresh();">Refresh</a>
 
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="http://cdn.peerjs.com/0.3/peer.min.js"></script>
     <script type="text/javascript" src="/zogl/js/zogl.min.js"></script>
 
@@ -123,8 +61,6 @@
                 }
             });
         }
-
-
     </script>
 </body>
 </html>
