--- a/host.html
+++ b/host.html
@@ -36,10 +36,51 @@
 
       <div class="starter-template">
         <h1>Host a Match</h1>
-        <p class="lead">
-            Use this document as a way to quickly start any new project.<br>
-            All you get is this text and a mostly barebones HTML document.
-        </p>
+
+        <form class="form-horizontal">
+          <div class="form-group">
+            <label for="name" class="col-sm-2 control-label">Server Name:</label>
+            <div class="col-sm-6">
+              <input type="text" id="name" class="form-control"
+                     placeholder="Server Name" value="Rise of Kings Server">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="pcount" class="col-sm-2 control-label">Max Players:</label>
+            <div class="col-sm-2">
+              <input type="number" id="pcount" class="form-control"
+                     placeholder="Maximum Number of Players" value="32">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Unit Loadout:</label>
+            <div class="col-sm-2">
+              <input type="number" id="unit-knight" class="form-control">
+              <span class="help-block">Knights</span>
+            </div>
+            <div class="col-sm-2">
+              <input type="number" id="unit-knight" class="form-control">
+              <span class="help-block">Spearmen</span>
+            </div>
+            <div class="col-sm-2">
+              <input type="number" id="unit-knight" class="form-control">
+              <span class="help-block">Archers</span>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label" for="unit-max">
+              Maximum Units:
+            </label>
+            <div class="col-sm-2">
+              <input type="number" id="unit-max" class="form-control">
+            </div>
+          </div>
+
+          <button type="submit" class="btn btn-default btn-lg" style="width: 10em">Host Match</button>
+        </form>
       </div>
 
     </div>
