--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
     <meta name="user-scalable" content="no">
 
     <title>Rise of Kings</title>
+    <link rel="stylesheet" href="/css/style.css">
     <style type="text/css">
         html {
             -ms-touch-action: none;
@@ -17,43 +18,6 @@
 
         img {
             display: none;
-        }
-
-        .button {
-            -moz-box-shadow: 0px 1px 0px 0px #bee2f9;
-            -webkit-box-shadow: 0px 1px 0px 0px #bee2f9;
-            box-shadow: 0px 1px 0px 0px #bee2f9;
-            background-color:#63b8ee;
-            -webkit-border-top-left-radius:0px;
-            -moz-border-radius-topleft:0px;
-            border-top-left-radius:0px;
-            -webkit-border-top-right-radius:0px;
-            -moz-border-radius-topright:0px;
-            border-top-right-radius:0px;
-            -webkit-border-bottom-right-radius:0px;
-            -moz-border-radius-bottomright:0px;
-            border-bottom-right-radius:0px;
-            -webkit-border-bottom-left-radius:0px;
-            -moz-border-radius-bottomleft:0px;
-            border-bottom-left-radius:0px;
-            text-indent:0px;
-            border:1px solid #3866a3;
-            display:inline-block;
-            color:#14396a;
-            font-family:Verdana;
-            font-size:15px;
-            font-weight:normal;
-            font-style:normal;
-            height:57px;
-            line-height:57px;
-            width:128px;
-            text-decoration:none;
-            text-align:center;
-        }.button:hover {
-            background-color:#438ccc;
-        }.button:active {
-            position:relative;
-            top:1px;
         }
     </style>
 
