--- a/index.html
+++ b/index.html
@@ -216,11 +216,12 @@
     <script src="/js/net/config.js"></script>
     <script src="/js/net/matchmaker.js"></script>
 
+    <script src="/js/app/errors.js"></script>
     <script src="/js/app/index.js"></script>
     <script src="/js/app/host.js"></script>
 
     <script>
-      $(document).ready(function() {
+      $(function() {
         zogl.debug = true;
         refreshBrowser();
         navigate("browser");
